z-index fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1474,7 +1474,7 @@ span.bigger {
 .btn-red:hover {
     border: 1px solid #F53B49;
     background: transparent;
-    color: #F53B49;/* box-shadow: 0 0 0 2px $colorRed */
+    color: #F53B49;
 }
 .btn-red.btn--outline {
     border-color: #F53B49;
@@ -1605,7 +1605,7 @@ span.bigger {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 90;
+    z-index: 10;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1952,7 +1952,7 @@ span.bigger {
 /*HEADER */
 .header {
     position: absolute;
-    z-index: 90;
+    z-index: 9;
     margin-left: 75px;
     padding-top: 32px;
     padding-right: 4.5%;
@@ -2451,15 +2451,6 @@ span.bigger {
 }
 .modal__close:hover .ico-close {
     background-image: url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='UTF-8' standalone='no'?%3E %3Csvg width='14px' height='14px' viewBox='0 0 14 14' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch --%3E %3Ctitle%3EGroup%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cdefs/%3E %3Cg id='Desktop' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='menu' transform='translate(-338.000000, -30.000000)' fill='%23FFFFFF'%3E %3Cg id='Group' transform='translate(337.000000, 30.000000)'%3E %3Crect id='Rectangle-8' transform='translate(7.680000, 7.000000) rotate(-45.000000) translate(-7.680000, -7.000000) ' x='-1' y='6' width='17.3600006' height='2' rx='1'/%3E %3Crect id='Rectangle-8' transform='translate(7.680000, 7.000000) rotate(-315.000000) translate(-7.680000, -7.000000) ' x='-1' y='6' width='17.3600006' height='2' rx='1'/%3E %3C/g%3E %3C/g%3E %3C/g%3E %3C/svg%3E");
-}
-.up {
-    position: fixed;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    opacity: 0;
-}
-.up.visible {
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    opacity: 1;
 }
 /* Video */
 .video {
@@ -3639,7 +3630,7 @@ span.bigger {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 9;
+    z-index: 5;
 }
 .shopIntro__sticker.productMini__sticker--hot {
     top: 2px;
@@ -3893,6 +3884,11 @@ a.shopCta:hover {
     padding-left: 15px;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
+}
+@media(max-width: 992px) {
+    .shopCta__wrap--noCenter {
+        padding-left: 0;
+    }
 }
 .shopCta__wrapLeft {
     -webkit-flex: 0 0 auto;
